--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/styles/style.css">
-	<link rel="stylesheet" href="/styles/print.css" media="print">
+	<link rel="stylesheet" href="styles/style.css">
+	<link rel="stylesheet" href="styles/print.css" media="print">
 	<title>WiFi QR Code</title>
 </head>
 <body>
