Add basic aestethic

--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="print.css" media="print">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
 	<title>WiFi QR Code</title>
 </head>
 <body>
+	<header>
+        <a href="https://walker84837.github.io/"><i class="fas fa-home"></i></a>
+        <a href="https://github.com/walker84837/"><i class="fab fa-github"></i></a>
+        <a href="https://t.me/walker84837/"><i class="fab fa-telegram"></i></a>
+    </header>
+	<h1>WiFi QR Code Generator</h1>
 	<form>
 		<script src="qrcode.js"></script>
 		<script>
